<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/bookList"
        android:layout_width="358dp"
        android:layout_height="561dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:textColor="@color/dark_gray"
        android:divider="@android:color/transparent"
        android:dividerHeight="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/add_new_book"
        app:layout_constraintBottom_toTopOf="@+id/bookList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bookNumInfo"
        android:layout_width="159dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/list_item_shape"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/numberOfBooks"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/addBook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/numberOfReadBooks"
        android:layout_width="159dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/list_item_shape"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/books_read"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@+id/addBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>