<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/list_item_shape"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="197dp"
        android:background="@drawable/list_item_shape"
        android:clipToOutline="true"
        android:elevation="4dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookInformation"
        app:layout_constraintVertical_bias="0.156">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/bookHeader"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:text="@string/book_title"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/bookTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_title"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/authorHeader"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:paddingTop="15dp"
                android:text="@string/author_name"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/authorNameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/author_name"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/genreHeader"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:paddingTop="15dp"
                android:text="@string/genre"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/genreView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/genre"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/publicationYearHeader"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:paddingTop="15dp"
                android:text="@string/publication_year"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/publicationYearView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/publication_year"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/statusHeader"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="15dp"
                android:paddingTop="15dp"
                android:text="@string/status"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/statusView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/status"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/bookInformation"
        android:layout_width="383dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/book_information"
        android:textColor="@color/purple_500"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>